--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="app.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="content">
+            
+        </div>
+    </div>
 </body>
 </html>
