--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loruki | Cloud Hosting</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <div class="container">
-            <h1 class="logo">Loruki</h1>
+        <div class="container flex">
+            <h1 class="logo">Loruki.</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -22,5 +25,32 @@
             </nav>
         </div>
     </div>
+
+    <!-- Showcase -->
+    <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>Easier Deployment</h1>
+                <p>Deploy web apps of all kinds, from large scale enterprise APIs 
+                    to static websites or individuals. Fill out the form to try
+                a demo of our platform!</p>
+                <a href="features.html" class="btn btn-outline">Read More</a>
+            </div>
+            
+            <div class="showcase-form card">
+                <h2>Request a Demo</h2>
+                <div class="form-control">
+                    <input type="text" name="name" placeholder="Name" required>
+                </div>
+                <div class="form-control">
+                    <input type="text" name="company" placeholder="Company Name" required>
+                </div>
+                <div class="form-control">
+                    <input type="email" name="email" placeholder="Email" required>
+                </div>
+                <input type="submit" value="Send" class="btn btn-primary">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
