--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loruki | Cloud Hosting</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/utilities.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
@@ -37,7 +38,6 @@
                 <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites or individuals. Fill out the form to try a demo of our platform!</p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
-
             <div class="showcase-form card">
                 <h2>Request a Demo</h2>
                 <div class="form-control">
@@ -49,20 +49,33 @@
                 <div class="form-control">
                     <input type="email" name="email" placeholder="Email" required>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <input type="submit" value="Send" class="btn btn-primary">
+            </div>
+        </div>
+    </section>
+
+    <!-- Stats -->
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">
+                Welcome to the best platform for building application of all types with modern architecture and scaling
+            </h3>
+
+            <div class="grid grid-3 text-center my-4">
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>10,329,328</h3>
+                    <p class="text-secondary">Deployed</p>
+                </div>
+                <div><i class="fas fa-upload fa-3x"></i>
+                    <h3>1532 TB</h3>
+                    <p class="text-secondary">Published</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>2,523,327</h3>
+                    <p class="text-secondary">Projects</p>
+                </div>
             </div>
         </div>
     </section>
